Update .env file

--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,5 @@
-HOSTNAME=localhostA
 PORT=8000
 JWT_SECRET=Secret
 NEO4J_URL=bolt://localhost:7687
 NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=niki3223
+NEO4J_PASSWORD=password
