--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "PowerOfYouth",
     "license": "ISC",
     "dependencies": {
+        "cookie-parser": "^1.4.5",
         "copyfiles": "^2.4.1",
         "cors": "^2.8.5",
         "dotenv": "^8.1.0",
