--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "PowerOfYouth",
     "license": "ISC",
     "dependencies": {
+        "@types/uuid": "^8.3.1",
         "cookie-parser": "^1.4.5",
         "copyfiles": "^2.4.1",
         "cors": "^2.8.5",
@@ -31,12 +32,14 @@
         "shortid": "^2.2.14",
         "slugify": "^1.3.4",
         "string-strip-html": "^4.1.1",
-        "unzipper": "^0.10.11"
+        "unzipper": "^0.10.11",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
+        "@types/express-jwt": "^6.0.2",
         "@types/jsonwebtoken": "^8.5.5",
         "@types/morgan": "^1.9.3",
         "nodemon": "^1.19.1",
