--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
         "@types/express-jwt": "^6.0.2",
         "@types/jsonwebtoken": "^8.5.5",
         "@types/morgan": "^1.9.3",
+        "@typescript-eslint/eslint-plugin": "^4.31.2",
+        "@typescript-eslint/parser": "^4.31.2",
+        "eslint": "^7.32.0",
         "nodemon": "^1.19.1",
         "ts-node": "^10.2.1",
         "typescript": "^4.4.2"
