--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "PowerOfYouth",
     "license": "ISC",
     "dependencies": {
+        "@types/multer": "^1.4.7",
         "@types/uuid": "^8.3.1",
         "cookie-parser": "^1.4.5",
         "copyfiles": "^2.4.1",
@@ -27,7 +28,7 @@
         "lodash": "^4.17.15",
         "mongoose": "^5.6.10",
         "morgan": "^1.9.1",
-        "multer": "^1.4.2",
+        "multer": "^1.4.3",
         "sharp": "^0.27.2",
         "shortid": "^2.2.14",
         "slugify": "^1.3.4",
