--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "prestart": "npm run build",
         "start": "node ./dist/index.js",
         "mon": "nodemon --ext ts,js,json,env ./src/index.ts",
-        "copy-files": "copyfiles -f src/.env dist",
-        "build": "tsc && npm run copy-files"
+        "build": "tsc"
     },
     "keywords": [],
     "author": "PowerOfYouth",
@@ -17,7 +16,6 @@
         "@types/multer": "^1.4.7",
         "@types/uuid": "^8.3.1",
         "cookie-parser": "^1.4.5",
-        "copyfiles": "^2.4.1",
         "cors": "^2.8.5",
         "dotenv": "^8.1.0",
         "express": "^4.17.1",
