--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-unity-webgl": "^8.5.1",
+    "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -43,5 +44,6 @@
   },
   "devDependencies": {
     "dotenv": "^10.0.0"
-  }
+  },
+  "proxy": "http://77.246.159.176:3000"
 }
