--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "mobx": "^6.3.5",
+    "mobx-react-lite": "^3.2.1",
+    "mobx-state-tree": "^5.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
