--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.25.0",
     "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
     "mobx-state-tree": "^5.0.3",
