--- a/package.json
+++ b/package.json
@@ -10,31 +10,23 @@
         "build": "tsc"
     },
     "keywords": [],
-    "author": "PowerOfYouth",
+    "author": "Power of Youth",
     "license": "ISC",
     "dependencies": {
-        "@types/multer": "^1.4.7",
-        "@types/uuid": "^8.3.1",
-        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^8.1.0",
         "express": "^4.17.1",
         "express-jwt": "^5.3.1",
         "express-validator": "^6.1.1",
-        "formidable": "^1.2.1",
         "jsonwebtoken": "^8.5.1",
-        "lodash": "^4.17.15",
         "mongoose": "^5.6.10",
         "morgan": "^1.9.1",
         "multer": "^1.4.3",
-        "sharp": "^0.27.2",
-        "shortid": "^2.2.14",
-        "slugify": "^1.3.4",
-        "string-strip-html": "^4.1.1",
-        "unzipper": "^0.10.11",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
+        "@types/multer": "^1.4.7",
+        "@types/uuid": "^8.3.1",
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
