--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
             "always"
         ],
         "no-unused-vars": ["warn"],
-        "react/prop-types": ["warn"]
+        "react/prop-types": 0
     },
     "settings": {
         "react": {
