--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mobx-state-tree": "^5.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "react-unity-webgl": "^8.5.1",
