Add http-proxy-middleware package. Add setupProxy.js

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.25.0",
+    "http-proxy-middleware": "^2.0.1",
     "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
     "mobx-state-tree": "^5.0.3",
@@ -51,6 +52,5 @@
   },
   "devDependencies": {
     "dotenv": "^10.0.0"
-  },
-  "proxy": "http://edgime.ru:3000"
+  }
 }
