--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@types/jsonwebtoken": "^8.5.5",
         "@types/morgan": "^1.9.3",
         "@types/multer": "^1.4.7",
+        "@types/node": "^16.11.7",
         "@types/uuid": "^8.3.1",
         "@typescript-eslint/eslint-plugin": "^4.31.2",
         "@typescript-eslint/parser": "^4.31.2",
