--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.25.0",
-    "http-proxy-middleware": "^2.0.1",
     "eslint": "^7.11.0",
+    "http-proxy-middleware": "^2.0.1",
     "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
     "mobx-state-tree": "^5.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flickity-component": "^3.6.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
