--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.25.0",
     "eslint": "^7.11.0",
+    "flickity": "^2.2.2",
     "http-proxy-middleware": "^2.0.1",
     "mobx": "^6.3.5",
     "mobx-react-lite": "^3.2.1",
