--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express-jwt": "^5.3.1",
         "express-validator": "^6.1.1",
         "jsonwebtoken": "^8.5.1",
+        "middleware-async": "^1.3.2",
         "mongoose": "^6",
         "mongoose-autopopulate": "^0.16.0",
         "morgan": "^1.9.1",
