Move config folder under src. Delete old DTO.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "allowJs": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "removeComments": true
     },
     "include": [
         "./src/**/*"
