Disable 'no-unused-vars' eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,7 @@
             "error",
             "always"
         ],
-        "no-unused-vars": ["warn"],
+        "no-unused-vars": "off",
         "react/prop-types": 0
     },
     "settings": {
