--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
     "name": "progress",
-    "version": "1.0.0",
-    "description": "User progress service",
-    "main": "dist/index.js",
-    "scripts": {
-        "prestart": "yarn build",
-        "start": "node ./dist/index.js",
-        "dev": "nodemon ./src/index.ts",
-        "build": "tsc"
-    },
+    "version": "0.0.1",
+    "description": "Progress storage service for «UrFU Games» project.",
     "author": "Aceki <Brekhuntsov Nikita>",
-    "license": "MIT",
+    "license": "ISC",
+    "type": "module",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "node --experimental-json-modules src/index.js",
+        "dev": "nodemon --experimental-json-modules -e js,json src/index.js"
+    },
     "dependencies": {
+        "ajv": "^8.11.0",
+        "ajv-formats": "^2.1.1",
         "axios": "^0.26.0",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "express-jwt": "^6.1.1",
         "express-validator": "^6.14.0",
         "middleware-async": "^1.3.2",
         "pg": "^8.7.3",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.17.0",
+        "sqlite3": "^5.0.2",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "@types/express": "^4.17.13",
-        "@types/node-fetch": "^2.6.1",
-        "nodemon": "^2.0.15",
-        "sqlite3": "^5.0.2",
-        "ts-node": "^10.7.0",
-        "typescript": "^4.6.2"
+        "nodemon": "^2.0.15"
     }
 }
