--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "author": "Power of Youth",
     "license": "ISC",
     "dependencies": {
-        "@types/express": "^4.17.13",
+        "axios": "^0.27.2",
         "cors": "^2.8.5",
         "dotenv": "^8.1.0",
         "express": "^4.17.2",
@@ -24,17 +24,16 @@
         "mongoose": "^6",
         "mongoose-autopopulate": "^0.16.0",
         "morgan": "^1.9.1",
-        "multer": "^1.4.3",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
         "@types/express-jwt": "^6.0.2",
         "@types/jsonwebtoken": "^8.5.5",
         "@types/mongoose-autopopulate": "^0.10.2",
         "@types/morgan": "^1.9.3",
-        "@types/multer": "^1.4.7",
         "@types/node": "^16.11.7",
         "@types/uuid": "^8.3.1",
         "@typescript-eslint/eslint-plugin": "^4.31.2",
