--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "author": "Power of Youth",
     "license": "ISC",
     "dependencies": {
+        "ajv": "^8.11.0",
+        "ajv-formats": "^2.1.1",
         "axios": "^0.27.2",
         "dotenv": "^8.1.0",
         "express": "^4.17.2",
@@ -23,6 +25,9 @@
         "mongoose": "^6",
         "mongoose-autopopulate": "^0.16.0",
         "morgan": "^1.9.1",
+        "pg": "^8.7.3",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.19.0",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
@@ -39,6 +44,7 @@
         "@typescript-eslint/parser": "^4.31.2",
         "eslint": "^7.32.0",
         "nodemon": "^1.19.1",
+        "sqlite3": "^5.0.6",
         "ts-node": "^10.2.1",
         "typescript": "^4.4.2"
     },
