--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "ajv": "^8.11.0",
         "ajv-formats": "^2.1.1",
         "axios": "^0.27.2",
+        "cors": "^2.8.5",
         "dotenv": "^8.1.0",
         "express": "^4.17.2",
         "express-jwt": "^5.3.1",
@@ -44,7 +45,6 @@
         "@typescript-eslint/parser": "^4.31.2",
         "eslint": "^7.32.0",
         "nodemon": "^1.19.1",
-        "sqlite3": "^5.0.6",
         "ts-node": "^10.2.1",
         "typescript": "^4.4.2"
     },
