--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "prestart": "npm run build",
         "start": "node ./dist/index.js",
         "dev": "nodemon ./src/index.ts",
-        "build": "tsc"
+        "build": "tsc",
+        "doc": "jsdoc -r -c jsdoc.json -d docs"
     },
     "keywords": [],
     "author": "Nikita Brekhuntsov <aceki320@gmail.com>",
@@ -42,6 +43,7 @@
         "@typescript-eslint/eslint-plugin": "^4.31.2",
         "@typescript-eslint/parser": "^4.31.2",
         "eslint": "^7.32.0",
+        "jsdoc": "^3.6.10",
         "nodemon": "^1.19.1",
         "ts-node": "^10.2.1",
         "typescript": "^4.4.2"
