Complete game publish page. Major refactoring

--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "urfu-games-client",
-  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.100.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
-    "aws-sdk": "^2.1148.0",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
     "eslint": "^7.11.0",
@@ -48,8 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "dotenv": "^10.0.0"
   }
 }
