--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -21,21 +21,21 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://server:3000;
+            proxy_pass http://api-service:3000;
         }
 
         location ~ /games/[a-f0-9\-]+/progress {
             add_header "Access-Control-Allow-Origin" "*"; # TODO
             add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
             add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
-            proxy_pass http://progress:3000; # Progress service
+            proxy_pass http://progress-service:3000; # Progress service
         }
 
         location = /upload {
             add_header "Access-Control-Allow-Origin" "*"; # TODO
             add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
             add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
-            proxy_pass http://files:3000;
+            proxy_pass http://files-service:3000;
         }
     }
 
