--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,7 +3,8 @@ FROM node:16
 WORKDIR /home
 COPY . /home
 
-ENV API_URI=https://api.urfugames.ru
+ARG API_URI
+ENV API_URI=${API_URI:-https://api.urfugames.ru}
 ENV PORT=3000
 # Идентификатор счетчика Яндекс.Метрики.
 ENV YM_ID=0
