--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,13 +1,14 @@
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage/
 
 # production
-/build
+build/
+src/globals.js
 
 # misc
 .DS_Store
