--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -6,55 +6,45 @@ http {
     client_max_body_size 200M;
 
     server {
-        server_name urfugames.ru www.urfugames.ru;
-        listen 80;
+        listen __FRONTEND_PORT__;
 
         root /var/www/urfugames.ru/html;
 
         location / {
-            try_files $uri $uri/ /index.html;
+            proxy_pass http://localhost:__FRONTEND_PORT__;
         }
     }
 
     server {
-        server_name api.urfugames.ru;
-        listen 80;
+        listen __API_PORT__;
 
         location / {
-            proxy_pass http://api-service:3000;
+            proxy_pass http://localhost:__API_PORT__;
         }
 
-        location ~ /games/[a-f0-9\-]+/progress {
-            add_header "Access-Control-Allow-Origin" "*"; # TODO
-            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
-            add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
-            proxy_pass http://progress-service:3000; # Progress service
-        }
-
-        location = /upload {
-            add_header "Access-Control-Allow-Origin" "*"; # TODO
-            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
-            add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
-            proxy_pass http://files-service:3000;
-        }
+        # location = /upload {
+        #   add_header "Access-Control-Allow-Origin" "*"; # TODO
+        #   add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
+        #   add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
+        #   proxy_pass http://files-service:3000;
+        # }
     }
 
-    server {
-        server_name files.urfugames.ru;
-        listen 80;
+    # server {
+    #     server_name files.urfugames.ru;
+    #     listen 80;
+    #     location / {
+    #         add_header "Access-Control-Allow-Origin" "*";
+    #         root /var/www/files.urfugames.ru;
+    #     }
+    # }
 
-        location / {
-            add_header "Access-Control-Allow-Origin" "*";
-            root /var/www/files.urfugames.ru;
-        }
-    }
+    # server {
+    #     server_name *.urfugames.ru;
 
-    server {
-        server_name *.urfugames.ru;
-
-        location / {
-            return 444;
-        }
-    }
+    #     location / {
+    #         return 444;
+    #     }
+    # }
 }
 
