--- a/files/Dockerfile
+++ b/files/Dockerfile
@@ -1,17 +1,19 @@
 FROM node:16
 
+WORKDIR /root
 COPY . .
 
 ENV HOSTNAME=localhost
+ENV PORT=3000
 ENV API_URI=https://api.urfugames.ru
 ENV FILES_URI=https://files.urfugames.ru
-ENV PORT=3000
-ENV UPLOADING_DIR=/home/data
+ENV FILES_UPLOADING_DIR=/root/data
 
 RUN yarn install
 
-EXPOSE 3000
+EXPOSE ${PORT}
 
-VOLUME ["/home/data"]
+VOLUME ["/root"]
+VOLUME ["${FILES_UPLOADING_DIR}"]
 
-ENTRYPOINT ["yarn", "start"]
+ENTRYPOINT ["yarn", "dev"]
