--- a/files/data/e9b8e5e1-9fcb-48f7-a56b-133a6deb692f-docker-compose.yml
+++ b/files/data/e9b8e5e1-9fcb-48f7-a56b-133a6deb692f-docker-compose.yml
@@ -5,11 +5,11 @@ services:
     container_name: frontend-urfu-games
     build: ./client
     environment:
+      - HOST=${FRONTEND_HOSTNAME} # `FRONTEND_HOSTNAME` может быть неопределена.
       - PORT=${FRONTEND_PORT}
       - API_URI=${API_URI}
-      - FILES_URI=${FILES_URI}
     volumes:
-      - ${PWD}/client:/root
+      - ${PWD}/client/src:/root/src
     depends_on:
       - api
     network_mode: host
@@ -19,12 +19,12 @@ services:
     container_name: api-urfu-games
     build: ./server
     environment:
-      - PORT=${API_PORT}
       - API_URI=${API_URI}
       - DATABASE_URI=postgres://postgres:${POSTGRES_PASSWORD}@localhost:5432/main
+      - PORT=${API_PORT}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD:-Admin1234}
     volumes:
-      - ${PWD}/server:/root
+      - ${PWD}/server/src:/root/src
     depends_on:
       postgres:
         condition: service_healthy
@@ -35,11 +35,13 @@ services:
     container_name: files-urfu-games
     build: ./files
     environment:
-      - PORT=${FILES_PORT}
       - API_URI=${API_URI}
+      - PORT=${FILES_PORT}
       - FILES_URI=${FILES_URI}
+      - FILES_UPLOADING_DIR=/root/data
     volumes:
-      - ${PWD}/files:/root
+      - ${PWD}/files/src:/root/src
+      - ${PWD}/files/data:/root/data
     network_mode: host
 
   # База данных PostgreSQL.
