--- a/files/package.json
+++ b/files/package.json
@@ -2,15 +2,16 @@
   "name": "files",
   "version": "0.0.1",
   "description": "Компонент, предназначенный для загрузки файлов на сервер.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "type": "module",
   "author": "Nikita Brekhuntsov <aceki320@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.1",
