--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
         "mongoose": "^6",
         "mongoose-autopopulate": "^0.16.0",
         "morgan": "^1.9.1",
+        "multer": "^1.4.5-lts.1",
         "pg": "^8.7.3",
         "pg-hstore": "^2.3.4",
         "sequelize": "^6.19.0",
