--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,9 @@
     "main": "dist/index.js",
     "scripts": {
         "build": "tsc",
-        "start": "node ./dist/index.js",
-        "dev": "nodemon ./src/index.ts",
+        "start": "node dist/index.js",
+        "dev": "nodemon src/index.ts",
+        "test": "mocha -r ts-node/register",
         "doc": "jsdoc -r -c jsdoc.json -d docs"
     },
     "keywords": [],
@@ -42,6 +43,7 @@
         "uuid": "^8.3.2"
     },
     "devDependencies": {
+        "chai": "^4.3.6",
         "eslint": "^7.32.0",
         "jsdoc": "^3.6.10",
         "mocha": "^10.0.0",
