--- a/api/package.json
+++ b/api/package.json
@@ -17,9 +17,7 @@
         "@types/cookie-parser": "^1.4.2",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
-        "@types/express-jwt": "^6.0.2",
         "@types/jsonwebtoken": "^8.5.5",
-        "@types/mongoose-autopopulate": "^0.10.2",
         "@types/morgan": "^1.9.3",
         "@types/node": "^16.11.7",
         "@types/uuid": "^8.3.1",
@@ -27,17 +25,16 @@
         "@typescript-eslint/parser": "^4.31.2",
         "axios": "^0.27.2",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
         "express": "^4.17.2",
-        "express-jwt": "^5.3.1",
+        "express-jwt": "^7.7.7",
         "express-validator": "^6.1.1",
         "jsonwebtoken": "^8.5.1",
         "middleware-async": "^1.3.2",
-        "mongoose": "^6",
-        "mongoose-autopopulate": "^0.16.0",
         "morgan": "^1.9.1",
         "multer": "^1.4.5-lts.1",
+        "nodemon": "^2.0.20",
         "pg": "^8.7.3",
-        "pg-hstore": "^2.3.4",
         "sequelize": "^6.19.0",
         "typescript": "^4.4.2",
         "uuid": "^8.3.2"
@@ -47,7 +44,6 @@
         "eslint": "^7.32.0",
         "jsdoc": "^3.6.10",
         "mocha": "^10.0.0",
-        "nodemon": "^1.19.1",
         "ts-node": "^10.2.1"
     },
     "jshintConfig": {
