--- a/files/package.json
+++ b/files/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.14.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.0",
     "nodemon": "^2.0.16",
     "uuid": "^8.3.2"
   }
