Use multistage build for 'api' and 'files'

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,21 +1,24 @@
-FROM node:16
+FROM node:16 AS prod
+
+ENV NODE_ENV=production
 
 WORKDIR /root
-COPY . .
+COPY . /root
 
-ENV API_URI=http://define_outside
-ENV FILES_URI=http://define_outside
-ENV DATABASE_URI=http://posgtres:password@define_outside:5432/db_name
-ENV PORT=3000
-ENV ADMIN_PASSWORD=admin
+RUN yarn install --prod && yarn build
+
+EXPOSE 3000
+
+CMD ["yarn", "start"]
+
+FROM prod AS dev
+
 ENV JWT_SECRET=jwt_secret
 ENV USER_PWD_SALT=salt
 ENV NODE_ENV=development
 
 RUN yarn install
 
-EXPOSE ${PORT}
-
 VOLUME ["/root"]
 
-ENTRYPOINT ["yarn", "dev"]
+CMD ["yarn", "dev"]
