--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,9 +7,14 @@ http {
 
     server {
         server_name urfugames.ru www.urfugames.ru;
-        listen 80;
+        listen 443 ssl;
 
-        root /var/www/urfugames.ru/html;
+        ssl_certificate /etc/letsencrypt/live/urfugames.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/urfugames.ru/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        root /var/www/urfugames.ru;
 
         location / {
             try_files $uri $uri/ /index.html;
@@ -17,36 +22,81 @@ http {
     }
 
     server {
-        server_name api.urfugames.ru;
-        listen 80;
-
-        location / {
-            proxy_pass http://api-service:3000;
+        if ($host = www.urfugames.ru) {
+            return 301 https://$host$request_uri;
         }
 
-        location ~ /games/[a-f0-9\-]+/progress {
-            add_header "Access-Control-Allow-Origin" "*"; # TODO
-            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
-            add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
-            proxy_pass http://progress-service:3000; # Progress service
+        if ($host = www.urfugames.ru) {
+            return 301 https://$host$request_uri;
+        }
+
+        server_name urfugames.ru www.urfugames.ru;
+        listen 80;
+        return 404;
+    }
+
+    server {
+        server_name api.urfugames.ru;
+        listen 443 ssl;
+
+        ssl_certificate /etc/letsencrypt/live/urfugames.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/urfugames.ru/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+        location / {
+            proxy_pass http://localhost:3000;
         }
 
         location = /upload {
             add_header "Access-Control-Allow-Origin" "*"; # TODO
             add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
             add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
-            proxy_pass http://files-service:3000;
+            proxy_pass http://localhost:3001;
         }
     }
 
     server {
-        server_name files.urfugames.ru;
+        if ($host = api.urfugames.ru) {
+            return 301 https://$host$request_uri;
+        }
+
+        if ($host = www.api.urfugames.ru) {
+            return 301 https://$host$request_uri;
+        }
+
+        server_name api.urfugames.ru www.api.urfugames.ru;
         listen 80;
+        return 404;
+    }
+
+    server {
+        server_name files.urfugames.ru;
+        listen 443 ssl;
+
+        ssl_certificate /etc/letsencrypt/live/urfugames.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/urfugames.ru/privkey.pem;
+        include /etc/letsencrypt/options-ssl-nginx.conf;
+        ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
             add_header "Access-Control-Allow-Origin" "*";
             root /var/www/files.urfugames.ru;
         }
+    }
+
+    server {
+        if ($host = files.urfugames.ru) {
+            return 301 https://$host$request_uri;
+        }
+
+        if ($host = www.files.urfugames.ru) {
+            return 301 https://$host$request_uri;
+        }
+
+        server_name files.urfugames.ru www.files.urfugames.ru;
+        listen 80;
+        return 404;
     }
 
     server {
