--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,13 +47,6 @@ http {
         location / {
             proxy_pass http://localhost:3000;
         }
-
-        location = /upload {
-            add_header "Access-Control-Allow-Origin" "*"; # TODO
-            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
-            add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
-            proxy_pass http://localhost:3001;
-        }
     }
 
     server {
@@ -79,9 +72,11 @@ http {
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-        location / {
-            add_header "Access-Control-Allow-Origin" "*";
-            root /var/www/files.urfugames.ru;
+        location = / {
+            add_header "Access-Control-Allow-Origin" "*"; # TODO
+            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
+            add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
+            proxy_pass http://localhost:3001;
         }
     }
 
