--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,6 +45,10 @@ http {
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
+            add_header "Access-Control-Allow-Origin" "*";
+            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
+            add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
+
             proxy_pass http://localhost:3000;
         }
     }
@@ -72,10 +76,15 @@ http {
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-        location = / {
-            add_header "Access-Control-Allow-Origin" "*"; # TODO
+        location /files {
+            alias /var/www/files.urfugames.ru;
+        }
+
+        location / {
+            add_header "Access-Control-Allow-Origin" "*";
             add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
             add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
+
             proxy_pass http://localhost:3001;
         }
     }
