--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,9 +45,9 @@ http {
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         location / {
-            add_header "Access-Control-Allow-Origin" "*";
-            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
-            add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
+            add_header "Access-Control-Allow-Origin" "*" always;
+            add_header "Access-Control-Allow-Methods" "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization" always;
 
             proxy_pass http://localhost:3000;
         }
@@ -81,9 +81,9 @@ http {
         }
 
         location / {
-            add_header "Access-Control-Allow-Origin" "*";
-            add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS";
-            add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization";
+            add_header "Access-Control-Allow-Origin" "*" always;
+            add_header "Access-Control-Allow-Methods" "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization" always;
 
             proxy_pass http://localhost:3001;
         }
