--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
         "@typescript-eslint/eslint-plugin": "^4.31.2",
         "@typescript-eslint/parser": "^4.31.2",
         "axios": "^0.27.2",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.17.2",
