--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,7 +46,7 @@ http {
 
         location / {
             add_header "Access-Control-Allow-Origin" "*" always;
-            add_header "Access-Control-Allow-Methods" "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header "Access-Control-Allow-Methods" "GET, POST, PUT, DELETE, OPTIONS, PATCH" always;
             add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization" always;
 
             proxy_pass http://localhost:3000;
@@ -77,7 +77,7 @@ http {
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
         add_header "Access-Control-Allow-Origin" "*" always;
-        add_header "Access-Control-Allow-Methods" "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header "Access-Control-Allow-Methods" "GET, POST, PUT, DELETE, OPTIONS, PATCH" always;
         add_header "Access-Control-Allow-Headers" "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization" always;
 
         location /files {
